Completed top header bar of results search page. Also fixed some overall page alignment issues

--- a/styles/search-style.css
+++ b/styles/search-style.css
@@ -20,12 +20,173 @@ h2 {
     font-weight: normal;
 }
 
+header {
+    display: block;
+    border-bottom: 1px solid #dfe1e5;
+}
+
 footer {
     position: relative;
 }
 
-/* Rules for the section that contains a single search result's information  */
 
+/* Rules for page header's search bar */
+#header-top-bar {
+    display: block;
+    position: relative;
+    margin-top: 13px;
+    text-align: left;
+}
+
+#header-logo {
+    display: inline-block;
+    position: relative;
+    top: 13px;
+    margin: 4px 35px 0 30px;
+    width: 91px;
+    height: 32px;
+}
+
+
+#header-search-bar {
+    display: inline-block;
+    position: relative;
+    padding-left: 27px;
+    border: 1px solid #dfe1e5;
+    border-radius: 24px;
+    width: 692px;
+    height: 46px;
+    padding: 5px 4px 0px 20px;
+}
+
+#header-search-bar a {
+    text-decoration: none;
+}
+
+#header-search-bar:hover, #header-search-bar:focus-within {
+    box-shadow: 0 1px 6px 0 rgba(32,33,36,0.28);
+    border-color: rgba(223,225,229,0);
+}
+
+#header-search-bar:focus-within {
+    width: 719px;
+    margin-left: -27px;
+    padding-left: 47px;
+}
+
+#header-search-text {
+    display: inline-block;
+    vertical-align: middle;
+    border: none;
+    width: 533px;
+    height: 36px;
+    color: rgba(0,0,0,.87);
+    font-size: 16px;
+    line-height: 36px;
+    outline: none;
+}
+
+#header-top-right {
+    display: inline-flex;
+    position: absolute;
+    align-items: center;
+    right: 20px;
+    top: 7px;    
+}
+
+#header-top-right a {
+    text-decoration: none;
+}
+
+.expand-icon-circle {
+    display: inline-block;
+    vertical-align: middle;
+    padding: 4px;
+    margin: 4px;
+    border-radius: 50%;
+}
+
+.expand-icon-circle:hover {
+    background-color: rgba(60,64,67,0.08);
+}
+
+.expand-icon {
+    display: block;
+    position: relative;
+    top: 50%;
+    height:24px;
+    width:24px;
+    margin: 4px;
+    fill: #5f6368;
+}
+
+/* called "result"-sign-in to distinguish from between homepage button" */
+#result-sign-in {
+    margin: 0 8px;
+    padding: 9px 23px;
+    border: 1px solid transparent;
+    border-radius: 4px;
+    background-color: #1a73e8;
+    color: #fff;
+    font-weight: 500;
+    font-size: 14px;
+    line-height: 16px;
+    letter-spacing: 0.25px;
+}
+
+#result-sign-in:hover {
+    background-color: #2b7de9;
+    box-shadow: 0 1px 2px 0 rgba(66,133,244,0.3), 0 1px 3px 1px rgba(66,133,244,0.15);
+}
+
+
+/* Rules for header's navigation section */
+.nav-header-box {
+    padding: 0;
+    width: 663px;
+    margin-left: 169px;
+}
+
+.nav-header-bar {
+    display: flex;
+    justify-content: space-between;
+    align-items: baseline;
+    font-size: 0;
+}
+
+.nav-header-bar a {
+    display: inline-block;
+    padding: 10px 12px 12px 10px;
+    margin: 11px 1px 0;
+    line-height: 16px;
+    font-size: 13px;
+    color: #5f6368;
+    vertical-align: baseline;
+}
+
+.nav-header-bar a:hover {
+    text-decoration: none;
+}
+
+.nav-header-bar a[class="nav-tools-button"] {
+    line-height: 19px;
+    padding: 4px 11px;
+    margin-left: -1px;  /* removes pixel movement on hover */
+}
+
+.nav-header-bar a[class="nav-tools-button"]:hover {
+    display: inline-block;
+    border-radius: 2px; /* removes pixel movement on hover */
+    margin-left: -2px;  /* removes pixel movement on hover */
+    margin-right: 0;
+    border: 1px solid #c6c6c6;
+    background-color: #f8f8f8;
+    background-image: -webkit-linear-gradient(top,#f8f8f8,#f1f1f1);
+    box-shadow: 0 1px 1px rgba(0,0,0,.1);
+}
+
+
+/* Rules for the section that contains a single search result's information  */
 section {
     width: 600px;
     margin-bottom: 27px;
@@ -34,8 +195,6 @@ section {
 .result-header {
     line-height: 1.3;
 }
-
-
 
 .result-url {
     padding: 1px 0;
@@ -70,8 +229,8 @@ section {
     color: #4d5156;
 }
 
-/* Rules for the expanded result containers */
 
+/* Rules for the expanded result containers */
 .result-box {
     position: relative;
     font-size: 14px;
@@ -135,9 +294,11 @@ div[class="result-box"] section {
     padding: 9px 40px 9px 16px;
 }
 
+
 /* Rules for the video results container */
 .videos {
     display: flex;
+    position: relative;
     width: 652px;
     justify-content: space-between;
 }
@@ -160,7 +321,8 @@ div[class="result-box"] section {
     position: absolute;
     display: block;
     width: fit-content;
-    top: 88px;
+    line-height: 16px;
+    top: 90px;
     left: 10px;
     border-radius: 2px;
     padding: 3px 4px 0 4px;
@@ -183,9 +345,10 @@ div[class="result-box"] section {
 
 .videos-swipe {
     line-height: 24px;
-    position: relative;
+    position: absolute;
     margin-top: -19px;
-    margin-left: -19px;
+    margin-right: -19px;
+    right: 0;
     top: 150px;
     width: 38px;
     height: 38px;
@@ -195,8 +358,8 @@ div[class="result-box"] section {
     text-align: center;
 }
 
-/* Rules for related search phrases near bottom of page */
 
+/* Rules for related search phrases near bottom of page */
 .related-phrases-box {
     margin-bottom: 28px;
 }
@@ -215,6 +378,7 @@ div[class="result-box"] section {
 .related-phrases-list li {
     padding: 3px 32px 3px 0;
 }
+
 
 /* Rules for the page navigation container near bottom of page */
 .nav-page-box {
@@ -268,7 +432,8 @@ div[class="result-box"] section {
     width: 71px;
 }
 
-/* Additional Rules for Page Footer (overrides some from style.css) */
+
+/* Additional Rules for Page Footer */
 .footer-box ul {
     padding-right: 30px;
     margin-left: 180px;
@@ -303,6 +468,64 @@ div[class="result-box"] section {
 
 
 /* Misc. rules for minor adjustments and icons */
+.clear-icon {
+    display: inline-block;
+    position: relative;
+    height: 24px;
+    width: 24px;
+    line-height: 44px;
+}
+
+.clear-icon-box {
+    display: inline-block;
+    position: relative;
+    bottom: 2px;
+    height: 28px;
+    vertical-align: middle;
+    padding-right: 16px;
+    fill: #80868b;
+    border-right: 1px solid #e4e4e4;
+}
+
+.mic-icon2 {
+    display: inline-block;
+    vertical-align: middle;
+    height: 24px;
+    width: 24px;
+    line-height: 44px;
+    margin: 0 6px;
+}
+
+.magnify-icon2 {
+    display: inline-block;
+    vertical-align: middle;
+    color: #4285f4;
+    fill: #4285f4;
+    height: 24px;
+    width: 24px;
+    margin: 0 3px;
+}
+
+.magnify-icon3 {
+    visibility: hidden;
+    display: inline-block;
+    position: absolute;
+    top: 11px;
+    left: 13px;
+    height:20px;
+    width:20px;
+    fill: #9AA0A6;
+}
+
+#header-search-bar:focus-within .magnify-icon3 {
+    visibility: visible;
+}
+
+.search-bar-icons {
+    display: inline-block;
+    position: relative;
+    bottom: 2px;
+}
 
 a:hover[class="result-header"], a:hover[class="result-tab"] {
     text-decoration: none;
@@ -331,6 +554,16 @@ section h2 {
 
 .text-light {
     color: #70757a;
+}
+
+.nav-icon {
+    display: inline-block;
+    position: relative;
+    top: 3px;
+    right: 1px;
+    height:16px;
+    width:16px;
+    fill: #5f6368;
 }
 
 .small-icon {
@@ -391,4 +624,9 @@ a:hover span[class="swipe-icon"]{
 .address {
     color: #333;
     font-weight: bold;
+}
+
+#nav-selected {
+    color: #1A73E8;
+    border-bottom: 3px solid #1A73E8;
 }
